--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,7 +1,7 @@
-name: Ben Doherty
-studentNumber: z1234567/Monday/Tuesday
-gitHubUsername: notionparallax
-stackoverflow: http://stackoverflow.com/users/1835727/ben
-unswEmail: noIdea@unsw.edu.au/name@company.com.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+name: James Pifat
+studentNumber: z5213548
+gitHubUsername: jamespifat4
+stackoverflow: 
+unswEmail: z5213548@unsw.edu.au
+realEmailFirstBit: James  # this avoids spam
+realEmailOtherBit: 
